kuneiform/grammar/.antlr/KuneiformParser.java
// Generated from /Users/brennanlamey/kwil-db/kuneiform/grammar/KuneiformParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class KuneiformParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LBRACE=1, RBRACE=2, LBRACKET=3, RBRACKET=4, COL=5, SCOL=6, LPAREN=7, RPAREN=8, 
		COMMA=9, AT=10, PERIOD=11, EQUALS=12, DATABASE=13, USE=14, IMPORT=15, 
		AS=16, MIN=17, MAX=18, MIN_LEN=19, MAX_LEN=20, NOT_NULL=21, PRIMARY=22, 
		DEFAULT=23, UNIQUE=24, INDEX=25, TABLE=26, TYPE=27, FOREIGN_KEY=28, REFERENCES=29, 
		ON_UPDATE=30, ON_DELETE=31, DO_NO_ACTION=32, DO_CASCADE=33, DO_SET_NULL=34, 
		DO_SET_DEFAULT=35, DO_RESTRICT=36, DO=37, START_ACTION=38, START_PROCEDURE=39, 
		NUMERIC_LITERAL=40, TEXT_LITERAL=41, BOOLEAN_LITERAL=42, BLOB_LITERAL=43, 
		VAR=44, INDEX_NAME=45, IDENTIFIER=46, ANNOTATION=47, WS=48, TERMINATOR=49, 
		BLOCK_COMMENT=50, LINE_COMMENT=51, STMT_BODY=52, TEXT=53, STMT_LPAREN=54, 
		STMT_RPAREN=55, STMT_COMMA=56, STMT_PERIOD=57, STMT_RETURNS=58, STMT_TABLE=59, 
		STMT_ARRAY=60, STMT_VAR=61, STMT_ACCESS=62, STMT_IDENTIFIER=63, STMT_WS=64, 
		STMT_TERMINATOR=65, STMT_BLOCK_COMMENT=66, STMT_LINE_COMMENT=67;
	public static final int
		RULE_program = 0, RULE_stmt_mode = 1, RULE_database_declaration = 2, RULE_use_declaration = 3, 
		RULE_table_declaration = 4, RULE_column_def = 5, RULE_index_def = 6, RULE_foreign_key_def = 7, 
		RULE_foreign_key_action = 8, RULE_identifier_list = 9, RULE_literal = 10, 
		RULE_type_selector = 11, RULE_constraint = 12, RULE_action_declaration = 13, 
		RULE_procedure_declaration = 14, RULE_table_return = 15, RULE_stmt_typed_param_list = 16, 
		RULE_stmt_type_list = 17, RULE_stmt_type_selector = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stmt_mode", "database_declaration", "use_declaration", "table_declaration", 
			"column_def", "index_def", "foreign_key_def", "foreign_key_action", "identifier_list", 
			"literal", "type_selector", "constraint", "action_declaration", "procedure_declaration", 
			"table_return", "stmt_typed_param_list", "stmt_type_list", "stmt_type_selector"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'['", "']'", "':'", "';'", "'('", "')'", "','", 
			"'@'", "'.'", "'='", "'database'", "'use'", "'import'", "'as'", "'min'", 
			"'max'", "'minlen'", "'maxlen'", null, null, "'default'", "'unique'", 
			"'index'", "'table'", "'type'", null, null, null, null, null, "'cascade'", 
			null, null, "'restrict'", "'do'", "'action'", "'procedure'", null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'returns'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "COL", "SCOL", "LPAREN", 
			"RPAREN", "COMMA", "AT", "PERIOD", "EQUALS", "DATABASE", "USE", "IMPORT", 
			"AS", "MIN", "MAX", "MIN_LEN", "MAX_LEN", "NOT_NULL", "PRIMARY", "DEFAULT", 
			"UNIQUE", "INDEX", "TABLE", "TYPE", "FOREIGN_KEY", "REFERENCES", "ON_UPDATE", 
			"ON_DELETE", "DO_NO_ACTION", "DO_CASCADE", "DO_SET_NULL", "DO_SET_DEFAULT", 
			"DO_RESTRICT", "DO", "START_ACTION", "START_PROCEDURE", "NUMERIC_LITERAL", 
			"TEXT_LITERAL", "BOOLEAN_LITERAL", "BLOB_LITERAL", "VAR", "INDEX_NAME", 
			"IDENTIFIER", "ANNOTATION", "WS", "TERMINATOR", "BLOCK_COMMENT", "LINE_COMMENT", 
			"STMT_BODY", "TEXT", "STMT_LPAREN", "STMT_RPAREN", "STMT_COMMA", "STMT_PERIOD", 
			"STMT_RETURNS", "STMT_TABLE", "STMT_ARRAY", "STMT_VAR", "STMT_ACCESS", 
			"STMT_IDENTIFIER", "STMT_WS", "STMT_TERMINATOR", "STMT_BLOCK_COMMENT", 
			"STMT_LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KuneiformParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KuneiformParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Database_declarationContext database_declaration() {
			return getRuleContext(Database_declarationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(KuneiformParser.EOF, 0); }
		public List<Use_declarationContext> use_declaration() {
			return getRuleContexts(Use_declarationContext.class);
		}
		public Use_declarationContext use_declaration(int i) {
			return getRuleContext(Use_declarationContext.class,i);
		}
		public List<Table_declarationContext> table_declaration() {
			return getRuleContexts(Table_declarationContext.class);
		}
		public Table_declarationContext table_declaration(int i) {
			return getRuleContext(Table_declarationContext.class,i);
		}
		public List<Stmt_modeContext> stmt_mode() {
			return getRuleContexts(Stmt_modeContext.class);
		}
		public Stmt_modeContext stmt_mode(int i) {
			return getRuleContext(Stmt_modeContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			database_declaration();
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 141562189201408L) != 0)) {
				{
				setState(42);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case USE:
					{
					setState(39);
					use_declaration();
					}
					break;
				case TABLE:
					{
					setState(40);
					table_declaration();
					}
					break;
				case START_ACTION:
				case START_PROCEDURE:
				case ANNOTATION:
					{
					setState(41);
					stmt_mode();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Stmt_modeContext extends ParserRuleContext {
		public Action_declarationContext action_declaration() {
			return getRuleContext(Action_declarationContext.class,0);
		}
		public Procedure_declarationContext procedure_declaration() {
			return getRuleContext(Procedure_declarationContext.class,0);
		}
		public List<TerminalNode> ANNOTATION() { return getTokens(KuneiformParser.ANNOTATION); }
		public TerminalNode ANNOTATION(int i) {
			return getToken(KuneiformParser.ANNOTATION, i);
		}
		public Stmt_modeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt_mode; }
	}

	public final Stmt_modeContext stmt_mode() throws RecognitionException {
		Stmt_modeContext _localctx = new Stmt_modeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt_mode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ANNOTATION) {
				{
				{
				setState(49);
				match(ANNOTATION);
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case START_ACTION:
				{
				setState(55);
				action_declaration();
				}
				break;
			case START_PROCEDURE:
				{
				setState(56);
				procedure_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Database_declarationContext extends ParserRuleContext {
		public TerminalNode DATABASE() { return getToken(KuneiformParser.DATABASE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(KuneiformParser.IDENTIFIER, 0); }
		public TerminalNode SCOL() { return getToken(KuneiformParser.SCOL, 0); }
		public Database_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_database_declaration; }
	}

	public final Database_declarationContext database_declaration() throws RecognitionException {
		Database_declarationContext _localctx = new Database_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_database_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(DATABASE);
			setState(60);
			match(IDENTIFIER);
			setState(61);
			match(SCOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Use_declarationContext extends ParserRuleContext {
		public Token extension_name;
		public Token alias;
		public TerminalNode USE() { return getToken(KuneiformParser.USE, 0); }
		public TerminalNode AS() { return getToken(KuneiformParser.AS, 0); }
		public TerminalNode SCOL() { return getToken(KuneiformParser.SCOL, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(KuneiformParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(KuneiformParser.IDENTIFIER, i);
		}
		public TerminalNode LBRACE() { return getToken(KuneiformParser.LBRACE, 0); }
		public List<TerminalNode> COL() { return getTokens(KuneiformParser.COL); }
		public TerminalNode COL(int i) {
			return getToken(KuneiformParser.COL, i);
		}
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(KuneiformParser.RBRACE, 0); }
		public TerminalNode COMMA() { return getToken(KuneiformParser.COMMA, 0); }
		public Use_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_use_declaration; }
	}

	public final Use_declarationContext use_declaration() throws RecognitionException {
		Use_declarationContext _localctx = new Use_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_use_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(USE);
			setState(64);
			((Use_declarationContext)_localctx).extension_name = match(IDENTIFIER);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACE) {
				{
				setState(65);
				match(LBRACE);
				setState(66);
				match(IDENTIFIER);
				setState(67);
				match(COL);
				setState(68);
				literal();
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(69);
					match(COMMA);
					setState(70);
					match(IDENTIFIER);
					setState(71);
					match(COL);
					setState(72);
					literal();
					}
				}

				setState(75);
				match(RBRACE);
				}
			}

			setState(79);
			match(AS);
			setState(80);
			((Use_declarationContext)_localctx).alias = match(IDENTIFIER);
			setState(81);
			match(SCOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Table_declarationContext extends ParserRuleContext {
		public TerminalNode TABLE() { return getToken(KuneiformParser.TABLE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(KuneiformParser.IDENTIFIER, 0); }
		public TerminalNode LBRACE() { return getToken(KuneiformParser.LBRACE, 0); }
		public List<Column_defContext> column_def() {
			return getRuleContexts(Column_defContext.class);
		}
		public Column_defContext column_def(int i) {
			return getRuleContext(Column_defContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(KuneiformParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(KuneiformParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(KuneiformParser.COMMA, i);
		}
		public List<Index_defContext> index_def() {
			return getRuleContexts(Index_defContext.class);
		}
		public Index_defContext index_def(int i) {
			return getRuleContext(Index_defContext.class,i);
		}
		public List<Foreign_key_defContext> foreign_key_def() {
			return getRuleContexts(Foreign_key_defContext.class);
		}
		public Foreign_key_defContext foreign_key_def(int i) {
			return getRuleContext(Foreign_key_defContext.class,i);
		}
		public Table_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_declaration; }
	}

	public final Table_declarationContext table_declaration() throws RecognitionException {
		Table_declarationContext _localctx = new Table_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_table_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(TABLE);
			setState(84);
			match(IDENTIFIER);
			setState(85);
			match(LBRACE);
			setState(86);
			column_def();
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(87);
				match(COMMA);
				setState(91);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IDENTIFIER:
					{
					setState(88);
					column_def();
					}
					break;
				case INDEX_NAME:
					{
					setState(89);
					index_def();
					}
					break;
				case FOREIGN_KEY:
					{
					setState(90);
					foreign_key_def();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Column_defContext extends ParserRuleContext {
		public Token name;
		public Type_selectorContext type;
		public TerminalNode IDENTIFIER() { return getToken(KuneiformParser.IDENTIFIER, 0); }
		public Type_selectorContext type_selector() {
			return getRuleContext(Type_selectorContext.class,0);
		}
		public List<ConstraintContext> constraint() {
			return getRuleContexts(ConstraintContext.class);
		}
		public ConstraintContext constraint(int i) {
			return getRuleContext(ConstraintContext.class,i);
		}
		public Column_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column_def; }
	}

	public final Column_defContext column_def() throws RecognitionException {
		Column_defContext _localctx = new Column_defContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_column_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			((Column_defContext)_localctx).name = match(IDENTIFIER);
			setState(101);
			((Column_defContext)_localctx).type = type_selector();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33423360L) != 0)) {
				{
				{
				setState(102);
				constraint();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Index_defContext extends ParserRuleContext {
		public Identifier_listContext columns;
		public TerminalNode INDEX_NAME() { return getToken(KuneiformParser.INDEX_NAME, 0); }
		public TerminalNode LPAREN() { return getToken(KuneiformParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(KuneiformParser.RPAREN, 0); }
		public TerminalNode UNIQUE() { return getToken(KuneiformParser.UNIQUE, 0); }
		public TerminalNode INDEX() { return getToken(KuneiformParser.INDEX, 0); }
		public TerminalNode PRIMARY() { return getToken(KuneiformParser.PRIMARY, 0); }
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public Index_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index_def; }
	}

	public final Index_defContext index_def() throws RecognitionException {
		Index_defContext _localctx = new Index_defContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_index_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(INDEX_NAME);
			setState(109);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 54525952L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(110);
			match(LPAREN);
			setState(111);
			((Index_defContext)_localctx).columns = identifier_list();
			setState(112);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Foreign_key_defContext extends ParserRuleContext {
		public Identifier_listContext child_keys;
		public Token parent_table;
		public Identifier_listContext parent_keys;
		public TerminalNode FOREIGN_KEY() { return getToken(KuneiformParser.FOREIGN_KEY, 0); }
		public List<TerminalNode> LPAREN() { return getTokens(KuneiformParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(KuneiformParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(KuneiformParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(KuneiformParser.RPAREN, i);
		}
		public TerminalNode REFERENCES() { return getToken(KuneiformParser.REFERENCES, 0); }
		public List<Identifier_listContext> identifier_list() {
			return getRuleContexts(Identifier_listContext.class);
		}
		public Identifier_listContext identifier_list(int i) {
			return getRuleContext(Identifier_listContext.class,i);
		}
		public TerminalNode IDENTIFIER() { return getToken(KuneiformParser.IDENTIFIER, 0); }
		public List<Foreign_key_actionContext> foreign_key_action() {
			return getRuleContexts(Foreign_key_actionContext.class);
		}
		public Foreign_key_actionContext foreign_key_action(int i) {
			return getRuleContext(Foreign_key_actionContext.class,i);
		}
		public Foreign_key_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_foreign_key_def; }
	}

	public final Foreign_key_defContext foreign_key_def() throws RecognitionException {
		Foreign_key_defContext _localctx = new Foreign_key_defContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_foreign_key_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(FOREIGN_KEY);
			setState(115);
			match(LPAREN);
			setState(116);
			((Foreign_key_defContext)_localctx).child_keys = identifier_list();
			setState(117);
			match(RPAREN);
			setState(118);
			match(REFERENCES);
			setState(119);
			((Foreign_key_defContext)_localctx).parent_table = match(IDENTIFIER);
			setState(120);
			match(LPAREN);
			setState(121);
			((Foreign_key_defContext)_localctx).parent_keys = identifier_list();
			setState(122);
			match(RPAREN);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ON_UPDATE || _la==ON_DELETE) {
				{
				{
				setState(123);
				foreign_key_action();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Foreign_key_actionContext extends ParserRuleContext {
		public TerminalNode ON_UPDATE() { return getToken(KuneiformParser.ON_UPDATE, 0); }
		public TerminalNode ON_DELETE() { return getToken(KuneiformParser.ON_DELETE, 0); }
		public TerminalNode DO_NO_ACTION() { return getToken(KuneiformParser.DO_NO_ACTION, 0); }
		public TerminalNode DO_CASCADE() { return getToken(KuneiformParser.DO_CASCADE, 0); }
		public TerminalNode DO_SET_NULL() { return getToken(KuneiformParser.DO_SET_NULL, 0); }
		public TerminalNode DO_SET_DEFAULT() { return getToken(KuneiformParser.DO_SET_DEFAULT, 0); }
		public TerminalNode DO_RESTRICT() { return getToken(KuneiformParser.DO_RESTRICT, 0); }
		public TerminalNode DO() { return getToken(KuneiformParser.DO, 0); }
		public Foreign_key_actionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_foreign_key_action; }
	}

	public final Foreign_key_actionContext foreign_key_action() throws RecognitionException {
		Foreign_key_actionContext _localctx = new Foreign_key_actionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_foreign_key_action);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_la = _input.LA(1);
			if ( !(_la==ON_UPDATE || _la==ON_DELETE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DO) {
				{
				setState(130);
				match(DO);
				}
			}

			setState(133);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 133143986176L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Identifier_listContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(KuneiformParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(KuneiformParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(KuneiformParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(KuneiformParser.COMMA, i);
		}
		public Identifier_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier_list; }
	}

	public final Identifier_listContext identifier_list() throws RecognitionException {
		Identifier_listContext _localctx = new Identifier_listContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_identifier_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(IDENTIFIER);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(136);
				match(COMMA);
				setState(137);
				match(IDENTIFIER);
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode NUMERIC_LITERAL() { return getToken(KuneiformParser.NUMERIC_LITERAL, 0); }
		public TerminalNode BLOB_LITERAL() { return getToken(KuneiformParser.BLOB_LITERAL, 0); }
		public TerminalNode TEXT_LITERAL() { return getToken(KuneiformParser.TEXT_LITERAL, 0); }
		public TerminalNode BOOLEAN_LITERAL() { return getToken(KuneiformParser.BOOLEAN_LITERAL, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 16492674416640L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_selectorContext extends ParserRuleContext {
		public Token type;
		public TerminalNode IDENTIFIER() { return getToken(KuneiformParser.IDENTIFIER, 0); }
		public TerminalNode LBRACKET() { return getToken(KuneiformParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(KuneiformParser.RBRACKET, 0); }
		public Type_selectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_selector; }
	}
